tests/asm-link/section-union-data/rgbasm.err
error: sections containing data cannot have a modifier
   ╭─[ test.asm:1:9 ]
   │
 1 │ SECTION UNION "wat", ROM0
   │         ──┬──  
   │           ╰──── `union` is not allowed on a ROM0 section
───╯
1 error generated.
